Tooltips over the buttons to toggle sidebar and comparison photos

--- a/vuetify-project/src/styles/product-viewer.css
+++ b/vuetify-project/src/styles/product-viewer.css
@@ -65,7 +65,7 @@
   transform: translateY(-50%);
   z-index: 100;
   opacity: 0.95;
-  background-color: #4a2511 !important;
+  background-color: #E56F2C !important;
   min-width: 0;
   width: 30px;
   height: 60px;
@@ -80,7 +80,7 @@
   right: 10px;
   z-index: 100;
   opacity: 0.95;
-  background-color: #4a2511 !important;
+  background-color: #E56F2C !important;
   min-width: 0;
   width: 40px;
   height: 40px;
